<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github</groupId>
	<artifactId>springsongs</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.6.RELEASE</version>
		<relativePath/>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<docker.image.prefix>spring.io</docker.image.prefix>
	</properties>

	<developers>
		<developer>
			<name>FatCat</name>
			<email>jackchen32795@outlook.com</email>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Finchley.SR2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>springsongs-eureka</module>
		<module>springsongs-gateway</module>
		<module>springsongs-bootadmin</module>
		<module>springsongs-zipkin</module>
		<module>springsongs-activiti-service</module>
		<module>springsongs-job-service</module>
		<module>springsongs-sys-service</module>
		<module>springsongs-activiti-api</module>
		<module>springsongs-job-api</module>
		<module>springsongs-sys-api</module>
		<module>springsongs-common</module>
		<module>springsongs-sys-domain</module>
    <module>springsongs-job-domain</module>
    <module>springsongs-activiti-domain</module>
  </modules>
</project>